# vall-e

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: ar.yml  nar.yml
config/LibriTTS/: ar-quarter.yml  ar.yml  nar-quarter.yml  nar.yml
config/test/: ar.yml  nar.yml
data/test/: test.phn.txt  test.qnt.pt  test2.phn.txt  test2.qnt.pt
scripts/: plot.py  run.sh
vall_e/: __main__.py  config.py  data.py  export.py  sampler.py  train.py
vall_e/ar/: model.py
vall_e/emb/: g2p.py  qnt.py
vall_e/vall_e/: __init__.py  ar.py  base.py  nar.py
